github_data_collector/src/data/issue_comment/devsisters_libquic.txt
```
[ 50%] Building CXX object boringssl/crypto/aes/CMakeFiles/aes_test.dir/aes_test.cc.o
/Users/bogdan/tools/libquic/boringssl/crypto/aes/aes_test.cc:97:5: error: bool literal returned from
      'main' [-Werror,-Wmain]
    return false;
    ^      ~~~~~
1 error generated
```

It seems `aes_test.cc` has a warning, and because of `-Werror`, compilation fails. 

OS: Mac 10.14.5
CMake: 3.14.4
Compiler: Apple LLVM version 10.0.1 (clang-1001.0.46.4)
Hello,
Do you know about [Conan](https://github.com/conan-io/conan)?
[Conan](http://docs.conan.io/en/latest/) is modern dependency manager for C++. And will be great if your library will be available via package manager for other developers.

[Here](https://github.com/bincrafters/conan-templates) you can find example, how you can create package for the library. 

If you have any questions, just ask :-)
here's the log:


~/source/libquic/build$ cmake ..
-- The C compiler identification is GNU 5.4.0
-- The CXX compiler identification is GNU 5.4.0
-- Check for working C compiler: /usr/bin/cc
-- Check for working C compiler: /usr/bin/cc -- works
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Detecting C compile features
-- Detecting C compile features - done
-- Check for working CXX compiler: /usr/bin/c++
-- Check for working CXX compiler: /usr/bin/c++ -- works
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Setting build type to 'Debug' as none was specified.
-- Looking for pthread.h
-- Looking for pthread.h - found
-- Looking for pthread_create
-- Looking for pthread_create - not found
-- Looking for pthread_create in pthreads
-- Looking for pthread_create in pthreads - not found
-- Looking for pthread_create in pthread
-- Looking for pthread_create in pthread - found
-- Found Threads: TRUE  
-- Found Protobuf: /usr/local/lib/libprotobuf.so (Required is at least version "3") 
-- Found Perl: /usr/bin/perl (found version "5.22.1") 
CMake Error at boringssl/CMakeLists.txt:26 (message):
  Could not find Go


-- Configuring incomplete, errors occurred!
See also "/home/liuyafei/source/libquic/build/CMakeFiles/CMakeOutput.log".
See also "/home/liuyafei/source/libquic/build/CMakeFiles/CMakeError.log".

the newer quic has implemented BBR congestion control
would you like to merge the newer quic implementation into libquic?

Restore header + fix CPP header selection logic.

Not possible to build on OSX without this as the path to Go is user-dependent (e.g. installed via brew in not /usr/local/bin).  Inherit those paths from command-line/higher-level build system if available.

So basically, if i'm some programmer who wants to screw around with making an existing c++ server application use quic, Where do i start?

What I see here are some random files with no documentation on usage inside some c++ application.

Am I missing something?

How about port Google quic_simple_server and client?

GNU libc 2.24 (published 2016-08-04) deprecated `readdir_r`, see the [announcement email](https://lwn.net/Articles/696469/):

> - The readdir_r and readdir64_r functions have been deprecated.  It is
>   recommended to use readdir and readdir64 instead.

This causes the build to fail:

```
[566/727] Building C object boringssl/decrepit/ssl/CMakeFiles/ssl_decrepit.dir/ssl_decrepit.c.o
FAILED: boringssl/decrepit/ssl/CMakeFiles/ssl_decrepit.dir/ssl_decrepit.c.o 
/usr/bin/cc  -DBORINGSSL_IMPLEMENTATION -DUSE_OPENSSL -D__STDC_CONSTANT_MACROS -D__STDC_LIMIT_MACROS -I../src -I../src/third_party/modp_b64 -I../boringssl/include -I../src/third_party/protobuf/src -I/src -I../boringssl/decrepit/ssl/../../include -Wall -fpic -gdwarf-4 -Wall -Werror -Wformat=2 -Wsign-compare -Wmissing-field-initializers -ggdb -fvisibility=hidden -Wmissing-prototypes -Wshadow -std=c11 -D_XOPEN_SOURCE=700 -g -MD -MT boringssl/decrepit/ssl/CMakeFiles/ssl_decrepit.dir/ssl_decrepit.c.o -MF boringssl/decrepit/ssl/CMakeFiles/ssl_decrepit.dir/ssl_decrepit.c.o.d -o boringssl/decrepit/ssl/CMakeFiles/ssl_decrepit.dir/ssl_decrepit.c.o   -c ../boringssl/decrepit/ssl/ssl_decrepit.c
../boringssl/decrepit/ssl/ssl_decrepit.c: In function ‘OPENSSL_DIR_read’:
../boringssl/decrepit/ssl/ssl_decrepit.c:157:3: error: ‘readdir_r’ is deprecated [-Werror=deprecated-declarations]
   if (readdir_r((*ctx)->dir, &(*ctx)->dirent, &dirent) != 0 ||
   ^~
In file included from ../boringssl/decrepit/ssl/ssl_decrepit.c:115:0:
/usr/include/dirent.h:183:12: note: declared here
 extern int readdir_r (DIR *__restrict __dirp,
            ^~~~~~~~~
cc1: all warnings being treated as errors
[…]
ninja: build stopped: subcommand failed.
```
